--- a/Alicargo/packages.config
+++ b/Alicargo/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="EPPlus" version="3.1.3.3" targetFramework="net45" />
+  <package id="iTextSharp" version="5.5.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
   <package id="jQuery.Cookie" version="1.4.0" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
@@ -22,7 +23,6 @@
   <package id="Ninject.MVC3" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
-  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
   <package id="T4MVC" version="3.9.1" targetFramework="net45" />
   <package id="T4MVCExtensions" version="3.9.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
