--- a/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
+++ b/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Repositories\TemplateRepositoryTests.cs" />
     <Compile Include="Repositories\CityRepositoryTests.cs" />
     <Compile Include="Repositories\User\ClientBalanceRepositoryTests.cs" />
+    <Compile Include="Repositories\User\UserRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
